Fix broken css

--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -580,7 +580,6 @@ html {
 
     color: $banner-text-color;
     padding: 10px 5px;
-    text-align: center
     text-shadow: 1px 1px 2px #33333355;
 
     & > *:first-child {
